# TemplateFitting

./: CMakeLists.txt  ConfigureANN.cmake  ConfigureCLAPACK.cmake  ConfigureITK.cmake  README.md
Example/: Target.off  TargetLmks.txt  Template.off  TemplateFittingTest.cmd  TemplateLmks.txt
TemplateFitting/: CMakeLists.txt  DataContainer.h  Definitions.h  FileLoader.cpp  FileLoader.h  FileWriter.cpp  FileWriter.h  KDTree3.cpp  KDTree3.h  Main.cpp  MathHelper.cpp  MathHelper.h  TemplateFitting.cpp  TemplateFitting.h  TemplateFittingCostFunction.cpp  TemplateFittingCostFunction.h  VectorNX.h
